# OLD-libqalculate

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README.translate  TODO  autogen.sh  configure.ac  configure.in
data/: Makefile.in  currencies.xml.in  datasets.xml.in  elements.xml.in  functions.xml.in  planets.xml.in  prefixes.xml.in  units.xml.in  variables.xml.in
docs/reference/: Doxyfile  Makefile.am
libqalculate/: BuiltinFunctions.cc  BuiltinFunctions.h  Calculator.cc  Calculator.h  DataSet.cc  DataSet.h  ExpressionItem.cc  ExpressionItem.h  Function.cc  Function.h  Makefile.am  MathStructure.cc  MathStructure.h  Number.cc  Number.h  Prefix.cc  Prefix.h  Unit.cc  Unit.h  Variable.cc  Variable.h  includes.h  qalculate.h  support.cc  support.h  util.cc  util.h
po/: fr.po  libqalculate.pot  nl.po  sv.po  zh_CN.po
po-defs/: POTFILES.in  libqalculate.pot  nl.po  sv.po  zh_CN.po
src/: Makefile.am  defs2doc.cc  qalc.cc
