## Process this file with automake to produce Makefile.in

SUBDIRS = libqalculate src data po po-defs docs

EXTRA_DIST = \
	autogen.sh \
	TODO \
	intltool-extract.in \
	intltool-merge.in \
	intltool-update.in \
	omf.make \
	xmldocs.make \
	libqalculate.pc.in

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = libqalculate.pc
