#
# docs/reference/Makefile.am for qalculate
#

referencedir = $(datadir)/doc/$(PACKAGE)-$(VERSION)/reference/html
reference_DATA = \
		$(top_srcdir)/docs/reference/html/*.png
		$(top_srcdir)/docs/reference/html/*.html
		$(top_srcdir)/docs/reference/html/*.css

EXTRA_DIST = \
		$(top_srcdir)/docs/reference/html/*.png
		$(top_srcdir)/docs/reference/html/*.html
		$(top_srcdir)/docs/reference/html/*.css


